# bamUtil

./: .gitignore  .travis.yml  BamExecutable.cpp  BamExecutable.h  CMakeLists.txt  Diff.cpp  Diff.h  Doxyfile  DumpHeader.h  DumpIndex.cpp  DumpRefInfo.h  Filter.cpp  Filter.h  Main.cpp  Makefile  Makefile.bam  Makefile.inc  Makefile.include  Makefile.lib  Makefile.test  Makefile.tool  Makefile.toolchain  README.md  README.txt  ReadIndexedBam.cpp  Revert.cpp  SplitChromosome.cpp  SplitChromosome.h  Validate.cpp  Validate.h  WriteRegion.cpp
copyrights/: COPYING  COPYING.samtools  COPYING.tclap  LICENSE.chromium  LICENSE.twister  LICENSE.txt
lib/: .gitignore  Makefile  Makefile.lib  samtools-0.1.12a.tar.bz2  samtools-0.1.7a-hybrid.tar.bz2
lib/bam/: BamIndex.cpp  BamIndex.h  BamInterface.cpp  BamInterface.h  ErrorHandler.cpp  ErrorHandler.h  GenericSamInterface.cpp  GenericSamInterface.h  Makefile  Makefile.bam  Makefile.tool  Pileup.h  PileupElement.cpp  PileupElement.h  PileupElementBaseQual.cpp  PileupElementBaseQual.h  PileupReader.cpp  PileupReader.h  README.txt  SamFile.cpp  SamFile.h  SamFileHeader.cpp  SamFileHeader.h  SamFilter.cpp  SamFilter.h  SamFlag.cpp  SamFlag.h  SamHeaderHD.cpp  SamHeaderHD.h  SamHeaderPG.cpp  SamHeaderPG.h  SamHeaderRG.cpp  SamHeaderRG.h  SamHeaderRecord.cpp  SamHeaderRecord.h  SamHeaderSQ.cpp  SamHeaderSQ.h  SamHeaderTag.cpp  SamHeaderTag.h  SamInterface.cpp  (+14 more)
lib/fastq/: BaseComposition.h  BaseCount.h  FastQFile.cpp  FastQFile.h  FastQStatus.cpp  FastQStatus.h  Makefile  Makefile.tool
lib/general/: BaseAsciiMap.cpp  BaseAsciiMap.h  BaseQualityHelper.cpp  BaseUtilities.cpp  BaseUtilities.h  BgzfFileType.cpp  BgzfFileType.h  CharBuffer.cpp  Chromosome.cpp  Chromosome.h  Cigar.cpp  (+66 more)
src/: Asp.cpp  Asp.h  AspReadNameID.cpp  AspReadNameID.h  Bam2FastQ.cpp  Bam2FastQ.h  BamExecutable.cpp  BamExecutable.h  BaseCV.h  BaseInfo.cpp  BaseInfo.h  BaseInfoFile.cpp  BaseInfoFile.h  BaseInfoRecord.cpp  BaseInfoRecord.h  ClipOverlap.cpp  ClipOverlap.h  Convert.cpp  Convert.h  Covariates.h  Dedup.cpp  Dedup.h  DedupBase.cpp  DedupBase.h  Dedup_LowMem.cpp  Dedup_LowMem.h  Diff.cpp  Diff.h  DumpAsp.cpp  DumpAsp.h  DumpHeader.cpp  DumpHeader.h  DumpIndex.cpp  DumpIndex.h  DumpRefInfo.cpp  DumpRefInfo.h  ExplainFlags.cpp  ExplainFlags.h  ExternalMemorySortManager.cpp  ExternalMemorySortManager.h  (+70 more)
test/: Makefile  Makefile.testtool  samTests.sh  splitChromosome.sh  testAsp.sh  testBam2FastQ.sh  testCigars.sh  testClipOverlap.sh  testClipOverlapSplitClip.sh  testDedup.sh  testDiff.sh  testFilter.sh  testGapInfo.sh  testIndelDiscordance.sh  testMergeBam.sh  testPolishBam.sh  testRGMergeBam.sh  testRecab.sh  testRevert.sh  testSeq.sh  testSplitBam.sh  testSqueeze.sh  testStats.sh  testTags.sh  testTrimBam.sh  writeRegion.sh
(+914 files in other folders)
